Add support for BG color uwu

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			Keyword:<input name="keyword"    type="color" value="#6BBDF5"></input>
 			Comment:<input name="comment"    type="color" value="#10B630"></input>
 			Label:<input name="label"      type="color" value="#F7A600"></input>
-			Background:<input disabled name="background" type="color" value="#000000"></input>
+			Background:<input name="background" type="color" value="#000000"></input>
 		</fieldset>
 	</form>
 	<img id="screenshot"></img>
