--- a/index.html
+++ b/index.html
@@ -5,18 +5,26 @@
 <canvas hidden id="sc" width="400" height="240"></canvas>
 
 <fieldset><legend>Input:</legend>
-	<input type="file" id="imageUpload" accept="image/*"/>
-	<button onclick="putcode(decode(screenshot));">Convert</button><br>
+	<input type="file" id="imageUpload"/>
+	<button onclick="if(textFile==false)putcode(decode(screenshot));else putcode(textFile);">Convert</button><br>
 	<form id="colors">
 		<fieldset><legend>Colors:</legend>
-			Text:<input name="text"       type="color" value="#FFFFFF"></input>
-			Number:<input name="number"     type="color" value="#F67BD5"></input>
-			String:<input name="string"     type="color" value="#A0A0A0"></input>
-			Function:<input name="function"   type="color" value="#7A7Cf7"></input>
-			Keyword:<input name="keyword"    type="color" value="#6BBDF5"></input>
-			Comment:<input name="comment"    type="color" value="#10B630"></input>
-			Label:<input name="label"      type="color" value="#F7A600"></input>
-			Background:<input name="background" type="color" value="#000000"></input>
+			Text:
+			<input name="text"       type="color" value="#FFFFFF"></input>
+			Number:
+			<input name="number"     type="color" value="#F67BD5"></input>
+			String:
+			<input name="string"     type="color" value="#A0A0A0"></input>
+			Function:
+			<input name="function"   type="color" value="#7A7Cf7"></input>
+			Keyword:
+			<input name="keyword"    type="color" value="#6BBDF5"></input>
+			Comment:
+			<input name="comment"    type="color" value="#10B630"></input>
+			Label:
+			<input name="label"      type="color" value="#F7A600"></input>
+			Background:
+			<input name="background" type="color" value="#000000"></input>
 		</fieldset>
 	</form>
 	<img id="screenshot"></img>
