output changed from canvas to image
and supports browsers without canvas blending

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	</fieldset>
 	
 	<fieldset><legend>Output:</legend>
-		<canvas id="imageoutput" width="400" height="240"></canvas>
+		<img id="imageoutput">
 	</fieldset>
 </form>
 
