--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 	
 	<fieldset><legend>Output:</legend>
 		<img id="imageoutput">
+		<br>
+		<input type="button" name="save" value="save (n3DS browser)" onclick="window.location=upload(dataUri);">
 	</fieldset>
 </form>
 
