--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	<fieldset><legend>Output:</legend>
 		<img id="imageoutput">
 		<br>
-		<input type="button" name="save" value="save (n3DS browser)" onclick="window.location=upload(dataUri);">
+		<input type="button" name="save" value="save (n3DS browser)" onclick="form.imageoutput.src=upload(dataUri);">
 	</fieldset>
 </form>
 
