support jpeg output

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 	</fieldset>
 	
 	<fieldset><legend>Output:</legend>
-		<img id="imageoutput">
+		JPEG: <input type="checkbox" name="jpeg" onchange="draw();">
 		<br>
-		<input type="button" name="save" value="save (n3DS browser)" onclick="form.imageoutput.src=upload(dataUri);">
+		<img id="imageoutput">
 	</fieldset>
 </form>
 
