--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 		<input type="file" name="textfileinput"/>
 		<br>
 		<textarea name="textinput"></textarea>
+		<br>
+		Rows: <input name="rows" type="number" value="29"> (default: 29)
 		<hr>
 		Text:
 		<input name="text"       type="color" value="#FFFFFF" onchange="go();">
