switch to sbconfig.js

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 	</fieldset>
 </form>
 
+<script src="https://12Me21.github.io/sbconfig.js"></script>
 <script src="screen.js"></script>
 <script src="onload.js"></script>
 <script src="https://12Me21.github.io/sbhighlight2/sbhighlight.js"></script>
